@@ -43,43 +43,43 @@ public class ValueParser {
         return "byte".equals(type) ? (byte) 0 : null;
       }
 
-      result = new Byte(value);
+      result = Byte.valueOf(value);
     } else if (type.equals("java.lang.Short") || type.equals("short")) {
       if (isNullOrEmpty(value)) {
         return "short".equals(type) ? (short) 0 : null;
       }
 
-      result = new Short(value);
+      result = Short.valueOf(value);
     } else if (type.equals("java.lang.Integer") || type.equals("int")) {
       if (isNullOrEmpty(value)) {
         return "int".equals(type) ? (int) 0 : null;
       }
 
-      result = new Integer(value);
+      result = Integer.valueOf(value);
     } else if (type.equals("java.lang.Long") || type.equals("long")) {
       if (isNullOrEmpty(value)) {
         return "long".equals(type) ? (long) 0 : null;
       }
 
-      result = new Long(value);
+      result = Long.valueOf(value);
     } else if (type.equals("java.lang.Double") || type.equals("double")) {
       if (isNullOrEmpty(value)) {
         return "double".equals(type) ? (double) 0 : null;
       }
 
-      result = new Double(value);
+      result = Double.valueOf(value);
     } else if (type.equals("java.lang.Float") || type.equals("float")) {
       if (isNullOrEmpty(value)) {
         return "float".equals(type) ? (float) 0 : null;
       }
 
-      result = new Float(value);
+      result = Float.valueOf(value);
     } else if (type.equals("java.lang.Boolean") || type.equals("boolean")) {
       if (isNullOrEmpty(value)) {
         return "boolean".equals(type) ? false : null;
       }
 
-      result = new Boolean(value);
+      result = Boolean.valueOf(value);
     } else if (type.equals("[Ljava.lang.String;")) {
       result = StringUtils.splitPreserveAllTokens(value, stringArraySeparator);
     }
